updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>A coding student looking to gain knowledge and better understanding of the field, in order to start a career in Software Developing</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Yuma,Az</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gaming, Listening to music, Collecting shoes</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Developer for Amazon</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Chandler,Az</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>In order to help solve problems and make people's lives easier</p>
     </section>
 
     <footer id="footer">
